# tv_viewer

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
Documentation/: TODO.txt  changelog.md  tkinter_fonts.txt
desktop/: tv_viewer.desktop
logger_conf/: logger_conf.py
stuff/: datafiles
tv_api_work/: tv_api_work.py  tv_maze.py  tv_maze_endpoints.py  tv_maze_exceptions.py
tv_logger_conf/: __init__.py  tv_logger_conf.py
tv_qt_class/: tv_qt_class.py
tv_sqllite/: tv_sqllite.py
tv_tk_class/: tv_tk_class.py
tv_viewer/: __init__.py  tv_viewer.py
